--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <body>
-   
-<nav class="navbar bg-body-tertiary">
+
+    <nav class="navbar bg-body-tertiary">
   <div class="container">
     <a class="navbar-brand" href="#">
-      <img src="./logo.jpg" alt="Bootstrap" width="200" height="150">
+      <img src="./logo.jpg" alt="Bootstrap" width="30" height="24">
     </a>
   </div>
 </nav>
 
-<div class="container text-center">
+    <div class="container text-center">
   <div class="row align-items-start">
-    <div class="col-sm bg-primary">
+    <div class="col">
       <h1 class="text-center">THE HISTORY OF CHELSEA FC</h1>
       <p class="text-center">With over a century of football played at a prime west London location so fundamental to the birth of Chelsea Football Club in 1905, there is a great story to tell, full of ambition, star players, dramatic quests for trophy success and fashionable style.
 
@@ -26,18 +26,18 @@ There have been upsets and difficult challenges along the way as well that only 
 
 The rise of Chelsea Women to become one of the powers of the game is told in its own section and the Stamford Bridge story is in Stadium History. Our major silverware is collected together in the Trophy Cabinet and Classic Kits down the years are recalled in their own gallery. Head down to the bottom of the page for plenty more with a historical theme</p>
     </div>
-    <div class="col-sm  bg-secondary">
-  
+    <div class="col">
+    
     </div>
-    <div class="col-sm  bg-tertiary">
-      <img src="./img1.jpg">
-      <p class="text-center fs-1">REFLECT ON YOUR JOURNEY</p>
+    <div class="col">
+     <img src="./img1.jpg">
+     <p class="text-center fs-5">REFLECT ON YOUR JOURNEY</p>
     </div>
   </div>
 </div>
 
 
-  <div id="carouselExample" class="carousel slide  py-2">
+<div id="carouselExample" class="carousel slide  py-2">
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="./squad.jpg" class="d-block w-100" alt="...">
@@ -63,7 +63,6 @@ The rise of Chelsea Women to become one of the powers of the game is told in its
   </button>
 </div>
 
-
 <div class="container text-center py-2">
   <div class="row align-items-start"> 
     <div class="col">
@@ -71,6 +70,7 @@ The rise of Chelsea Women to become one of the powers of the game is told in its
     </div>
   </div>
 </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
