--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="container text-center">
   <div class="row align-items-start">
-    <div class="col">
+    <div class="col-sm">
       <h1 class="text-center">THE HISTORY OF CHELSEA FC</h1>
       <p class="text-center">With over a century of football played at a prime west London location so fundamental to the birth of Chelsea Football Club in 1905, there is a great story to tell, full of ambition, star players, dramatic quests for trophy success and fashionable style.
 
@@ -26,10 +26,10 @@ There have been upsets and difficult challenges along the way as well that only 
 
 The rise of Chelsea Women to become one of the powers of the game is told in its own section and the Stamford Bridge story is in Stadium History. Our major silverware is collected together in the Trophy Cabinet and Classic Kits down the years are recalled in their own gallery. Head down to the bottom of the page for plenty more with a historical theme</p>
     </div>
-    <div class="col">
-    
+    <div class="col-sm">
+   <img src="./epl.png">
     </div>
-    <div class="col">
+    <div class="col-sm">
      <img src="./img1.jpg">
      <p class="text-center fs-5">REFLECT ON YOUR JOURNEY</p>
     </div>
@@ -44,13 +44,6 @@ The rise of Chelsea Women to become one of the powers of the game is told in its
     </div>
     <div class="carousel-item">
       <img src="./coach.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="./player.jpg" class="d-block w-100" alt="...">
-    </div>
-
-    <div class="carousel-item">
-      <img src="./player 2.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
