--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
 
-    <nav class="navbar bg-body-tertiary">
+   <nav class="navbar bg-body-tertiary">
   <div class="container">
     <a class="navbar-brand" href="#">
-      <img src="./logo.jpg" alt="Bootstrap" width="30" height="24">
+      <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30" height="24">
     </a>
   </div>
 </nav>
@@ -56,10 +56,18 @@ The rise of Chelsea Women to become one of the powers of the game is told in its
   </button>
 </div>
 
-<div class="container text-center py-2">
-  <div class="row align-items-start"> 
+
+
+<div class="container text-center">
+  <div class="row align-items-start">
     <div class="col">
-     <iframe width="560" height="315" src="https://www.youtube.com/embed/5_tjvKD5lAY?si=hyuubEBUUih1aXUL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+    </div>
+    <div class="col">
+    <iframe width="375" height="315" src="https://www.youtube.com/embed/5_tjvKD5lAY?si=hyuubEBUUih1aXUL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+    <div class="col">
+     
     </div>
   </div>
 </div>
