--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
 
@@ -30,7 +31,7 @@ The rise of Chelsea Women to become one of the powers of the game is told in its
    <img src="./epl.png">
     </div>
     <div class="col-sm">
-     <img src="./img1.jpg">
+     <img id="img" src="./img1.jpg">
      <p class="text-center fs-5">REFLECT ON YOUR JOURNEY</p>
     </div>
   </div>
