--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@ The rise of Chelsea Women to become one of the powers of the game is told in its
 
 <div class="container text-center">
   <div class="row align-items-start">
-    <div class="col">
+    <div class="col-sm">
 
     </div>
-    <div class="col">
-    <iframe width="375" height="315" src="https://www.youtube.com/embed/5_tjvKD5lAY?si=hyuubEBUUih1aXUL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <div class="col-sm" id="frame1">
+    <iframe height="315" src="https://www.youtube.com/embed/5_tjvKD5lAY?si=hyuubEBUUih1aXUL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
-    <div class="col">
+    <div class="col-sm">
      
     </div>
   </div>
