--- a/index.html
+++ b/index.html
@@ -56,12 +56,24 @@ The rise of Chelsea Women to become one of the powers of the game is told in its
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-
-
-
+<hr>
 <div class="container text-center">
   <div class="row align-items-start">
-    <div class="col-sm id="frame">
+    <div class="col-sm">
+      
+    </div>
+    <div class="col-sm">
+      <h3>SOCIALS</h3>
+    </div>
+    <div class="col-sm">
+      
+    </div>
+  </div>
+</div>
+<hr>
+<div class="container text-center">
+  <div class="row align-items-start">
+    <div class="col-sm" id="frame">
       <iframe  height="315" src="https://www.youtube.com/embed/9l01wknWh-w?si=HI7goa7CnTzpEnNY" title="YouTube video player" frameborder="0" allow="accelerometer;clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
     </div>
     <div class="col-sm" id="frame">
