--- a/index.html
+++ b/index.html
@@ -86,10 +86,21 @@ The rise of Chelsea Women to become one of the powers of the game is told in its
 </div>
 
 
-<!--Google map-->
-
-
-<!--Google Maps-->
+<hr>
+<div class="container text-center">
+  <div class="row align-items-start">
+    <div class="col-sm">
+      
+    </div>
+    <div class="col-sm">
+      <h3>LOCATE US</h3>
+    </div>
+    <div class="col-sm">
+      
+    </div>
+  </div>
+</div>
+<hr>
 
 <div class="container text-center">
   <div class="row align-items-start">
