--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@ The rise of Chelsea Women to become one of the powers of the game is told in its
     <div class="col-sm">
       
     </div>
-    <div class="col-sm"><i class="fa-brands fa-youtube me-2 py-2"></i>Youtube
+    <div class="col-sm">
+      <a href="https://www.youtube.com/@chelseafc" target="_blank" class="link-dark link-offset-2 link-underline-opacity-0 link-underline-opacity-0-hover"><i class="fa-brands fa-youtube me-2 py-2"></i>Youtube</a>
     </div>
     <div class="col-sm">
      
