--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-   <nav class="navbar bg-body-tertiary">
+   <nav class="navbar bg-body-tertiary fixed top">
   <div class="container">
     <a class="navbar-brand" href="#">
       <img src="logo.jpg" alt="Bootstrap" width="30" height="24">
