--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-   <nav class="navbar bg-body-tertiary fixed top">
+   <nav class="navbar bg-body-tertiary fixed-top">
   <div class="container">
     <a class="navbar-brand" href="#">
       <img src="logo.jpg" alt="Bootstrap" width="30" height="24">
@@ -18,7 +18,7 @@
 </nav>
 
 
-    <div class="container text-center">
+    <div class="container text-center mt-5 py-2">
   <div class="row align-items-start">
     <div class="col-sm  py-2">
       <h1 class="text-center">THE HISTORY OF CHELSEA FC</h1>
