--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ The rise of Chelsea Women to become one of the powers of the game is told in its
 </div>
 <hr>
 
-<div class="container text-center mt-1 py-1 bg-primary">
+<div class="container text-center mt-1 py-1 bg-primary mb-5 py-5">
   <div class="row align-items-start">
     <div class="col-sm">
       
@@ -120,7 +120,7 @@ The rise of Chelsea Women to become one of the powers of the game is told in its
 </div>
 
 
-<div class="container text-center ">
+<div class="container text-center mt-5 bg-body-tertiary">
   <div class="row align-items-start">
     <div class="col-sm">
       
